# chuckle

./: .gitignore  CMakeLists.txt  README.md  build.sh
ChuckleWrapper/: Package.swift
ChuckleWrapper/Sources/ObjC/: ChuckleWrapper.mm
ChuckleWrapper/Sources/ObjC/include/: ChuckleWrapper.h
ChuckleWrapper/Sources/Swift/: File.swift
ChuckleWrapper/Tests/ChuckleWrapperTests/: ChuckleWrapperTests.swift
ChuckleWrapper/lib/libchuckle.xcframework/: Info.plist
chuckle/: CMakeLists.txt  chuckle.cpp
cli/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/chuckle/: chuckle.h
